# trak

./: .gitignore  MANIFEST.old  README.md  requirements.txt  setup.cfg  setup.py  setup.pyOLD
src/: trakr.py
src/data/archive/: projects.txt  sessions.txt  tmp.txt  trackdata.txt
src/trak/: afile.py  core_methods.py  session.py
src/trak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/trak_CHAOBORID.egg-info/: PKG-INFO  SOURCES.txt
src/trakapp_GAMBUSIA.egg-info/: PKG-INFO  SOURCES.txt
trak.egg-info/: PKG-INFO  SOURCES.txt
