[metadata]
name = trak-CHAOBORID
version = 0.0.1
author = Greg Pyle 
author_email = chaoborid@gmail.com 
description = A simple tool for tracking writing progress 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gambusia/trakapp
project_urls =
    Bug Tracker = https://github.com/gambusia/trakapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
